# SPM_Project

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP_SPM_PRUSA.md  _w.py  app.py  approach tomorr copüilot.txt  gen_calib.ps1  generate_clean_tests.py  main.py  patch_dash_hardware_presence.py  pyproject.toml  refactor_spm_project.py  requirements.txt  spm.bat  spm.ps1  spm_deepseek.bat  spm_deepseek.ps1  spm_local_ai.bat  spm_local_ai.ps1
.github/: copilot-instructions.md
Hardware/: BUILD_CATEGORIES.md  CRTouch_SPM_FINAL_Project.odt  ORDERING_LIST.md  README.md  SUPPLIER_NOTES.md
ai/: pattern_matcher.py
config/: spm_hardware_initialized_profile.json  spm_mk4s_config.json
data/: axis_limit_check_2026_06_11.csv  crtouch_spm_final_project_extracted.txt  directional_demo_scan_2026_06_11.csv  directional_demo_scan_2026_06_11.metadata.json  educational_spm_clean_flow_dry_test_2026_06_11.csv  educational_spm_clean_flow_dry_test_2026_06_11.metadata.json  hardware_3x3_check_2026_06_11.csv  hardware_3x3_check_2026_06_11.metadata.json  interface_test_output.csv  interface_test_output.metadata.json  lightweight_ui_shutdown_gate_dry_test_2026_06_11.csv  lightweight_ui_shutdown_gate_dry_test_2026_06_11.metadata.json  metadata_check.csv  metadata_check.metadata.json  original_mk4s_max_check_2026_06_11.csv  original_mk4s_xy_min_check_2026_06_11.csv  overview_progress_check.csv  phase7_dry_run_check.csv  phase9_6_dryrun_probe.csv  phase9_6_dryrun_probe.metadata.json  phase9_x_line_topography_skeleton.csv  phase9_x_line_topography_skeleton_v2.csv  safe_raster_3x3_output.csv  safe_raster_5x5_output.csv  safe_raster_5x5_output.metadata.json  stm_demo_mode_dry_test_2026_06_11.csv  stm_demo_mode_dry_test_2026_06_11.metadata.json  ui_limit_live_check.csv  ui_limit_live_check.metadata.json  v0_11_full_demo_raster.csv  v0_11_full_demo_raster.metadata.json  v0_9_measurement_console_demo_2026_06_11.csv  (+1 more)
(+405 files in other folders)
